# sw-projection-storage

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml  test.yml
app/: blob.py  config.py  cosmos.py  main.py
docker/: test-docker.sh
scripts/: azurite-blob  cosmos
tests/: test_api.py
tests/helpers/: helpers.py
