[project]
name = "sw-projection-storage"
version = "0.1.0"
description = "Spectrum projection data storage"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0"
]

[tool.pytest.ini_options]
pythonpath = "."
